# Labs-Algo-ITMO

./: README.md
BasicAlgorithms/: AVL.cpp  BFS.cpp  BinarySearch.cpp  BinaryTree.cpp  BubbleSort.cpp  CMakeLists.txt  CountSortNegative.cpp  CountSortStable.cpp  CountSortStavbleNegative.cpp  CounterSort.cpp  DFS.cpp  HeapSort.cpp  InsertionSort.cpp  MergeSort.cpp  QuickSort.cpp  RLE_encode.cpp  RadixSortLSD.cpp
Lab1/: B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  bebra.cpp  main.cpp
Lab10/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp
Lab11/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  LifeCoding.cpp
Lab12/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp
Lab13/: A.cpp  C.cpp  CMakeLists.txt  E.cpp  G.cpp
Lab14/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  LifeCoding.cpp  TestKuhn.cpp  testleetcode.cpp
Lab15/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp
Lab2/: A.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  Gnormal.cpp  H.cpp  Hnormal.cpp  I.cpp  J.cpp  K.cpp  Kfinal.cpp  Kkk.c  Knormal.cpp  Tests.cpp  Tests2.cpp
Lab3/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  Hcorrect.cpp  Hcorrect2.cpp  I.cpp
Lab4/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  Colloq.cpp  D.cpp  Test.cpp
Lab5/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  G.cpp
Lab6/: A.cpp  C.cpp  CMakeLists.txt  D.cpp
Lab7/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  Calloq2.cpp
Lab8/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  testA.cpp
Lab9/: A.cpp  B.cpp  C.cpp  D.cpp  (+3 more)
